# gen-ecd88319-leo-v1

./: .agent_session.json  .build-state  .gitignore  BACKLOG.md  CLAUDE.md
.claude/agents/: research_agent.md
docs/: ARCHITECTURE_ANALYSIS.md  USER_MODE_IMPLEMENTATION.md  USER_MODE_PLAN.md
infrastructure/: MAS_START_PROMPT.md  PLAN.md  README.md  cdk.context.json  monitor-generation-25.sh  package-lock.json  package.json
infrastructure/docs/: AWS-MCP-SERVERS-DEPLOYMENT-GUIDE.md  architecture-uppercase.md  deployment.md  scale-steps.md  secrets-management.md
infrastructure/lib/: fargate-poc-stack.ts.original  leo-efs-stack.d.ts  leo-saas-stack.d.ts  leo-saas-stack.js  leo-saas-stack.ts
infrastructure/scripts/: deploy-saas-app.sh  deploy.sh  scale-down-appgen.sh  scale-up-appgen.sh  setup-aws-secrets.sh
leo-web/: .agent_session.json  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
leo-web/client/: index.html
leo-web/docs/: AUTH_IMPLEMENTATION.md  INTEGRATION_PLAN.md  (+2 more)
leo-worker/: .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  RESUME_FIX_PLAN.md  STATUS_2025-12-17.md
leo-worker/archive-2025-12-17/root/: .env.example  .env.example.original  .gitignore_tests  .mcp.json  AGENTS.md  ALL_FIXES_COMPLETE.md  ANTHROPIC_AUTH_ISSUE.md  APPLAYOUT_INTEGRATION_FIX_SUMMARY.md  APPLAYOUT_INTEGRATION_ROOT_CAUSE_ANALYSIS.md  ARCHIVE_PLAN_2025-09-17.md  ASTOUNDING_DESIGN_COMPLIANCE_REPORT.md  AUTHENTICATION_FIX.md  AUTH_FIX_REQUIRED_2025_01_18.md  BROWSER_CRITIC_FIX.md  BROWSER_CRITIC_FORMAT_STRING_FIX.md  CHANGELOG_FEATURE_SUMMARY.md  CLEANUP_SUMMARY.md  CLIENT_CLEANUP_FIX.md  CODEARTIFACT_USAGE.md  CODEX_2025-09-17.md  CODEX_DEEP_DIVE_2025-09-16.MD  CODEX_IMPLEMENTATION_PLAN_2025-09-16.md  CONTEXT_PROVIDERS_FIX_2025_01_17.md  CRITICAL_FIXES_2025-09-09.md  CRITICAL_FIX_APPLIED.md  CRITICAL_PIPELINE_ROUTING_ANALYSIS.md  CSS_COLOR_FIX_COMPLETE.md  CSS_PATCH_COMPLETE_AND_GENERATOR_FIX_PLAN.md  DEPLOYMENT_AUTOMATION.md  DEPLOYMENT_VERIFICATION_CHECKLIST.md  DESIGN_SYSTEM_MISMATCH_ANALYSIS.md  EDVISOR_TEST_REPORT.md  EXAMPLES_AND_ISSUES_READY.md  EXTRACTED_DESIGN_SYSTEM_FROM_REFERENCE.md  FASTAPI_AGENT_SPEC.md  FASTAPI_MIGRATION_PLAN.md  FINAL_FIX_COMPLETE.md  FINAL_POOLER_FINDINGS.md  FIX_DESIGN_SYSTEM_INTEGRATION_2025-09-16.md  FRONTEND_IMPLEMENTATION_STANDALONE.md  (+164 more)
scripts/: README.md  approve-user.sh  build.sh  check-signups.sh  deploy-ecs.sh  inspect-efs.sh  inspect-repos.sh  logs.sh  map-and-diff.py  migrate-leo-dev.sh  run-generated-leo.sh  run-leo.sh  signup-report.py
(+3420 files in other folders)
